alpha#40: avoid strange split display during map load with float map behind buttons

--- a/viewer/style/avnav_viewer_new.less
+++ b/viewer/style/avnav_viewer_new.less
@@ -1716,7 +1716,7 @@ span.valuePrefix{
       height: 100%;
       .text{
         font-size: 3em;
-        flex-basis: 70%;
+        flex-basis: 5em;
       }
     }
     .loading {
